Search url, method and view added

--- a/Notebooks/loadSynergy_test.ipynb
+++ b/Notebooks/loadSynergy_test.ipynb
@@ -30019,7 +30019,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# El gráfico anterior corresponde al siguiente filtro\n",
+    "measurement_name = 'OD'\n",
+    "strain = 'Top10'\n",
+    "media = 'M9-glucosa'\n",
+    "dna= 'pLux76:RFP/pTet:YFP/std:CFP'"
+   ]
   },
   {
    "cell_type": "code",
