--- a/Notebooks/loadSynergy_test_Old meta.ipynb
+++ b/Notebooks/loadSynergy_test_Old meta.ipynb
@@ -234,6 +234,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"1\":{\"A\":\"None\",\"B\":\"None\",\"C\":\"None\",\"D\":\"None\",\"E\":\"None\",\"F\":\"None\",\"G\":\"None\",\"H\":\"None\"},\"2\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"3\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"4\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"5\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"6\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"7\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"8\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"9\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"10\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"11\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"},\"12\":{\"A\":\"Top10\",\"B\":\"Top10\",\"C\":\"Top10\",\"D\":\"Top10\",\"E\":\"Top10\",\"F\":\"Top10\",\"G\":\"Top10\",\"H\":\"Top10\"}}'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_df = df_strains.to_json()\n",
+    "json_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
