--- a/Notebooks/loadSynergy_test.ipynb
+++ b/Notebooks/loadSynergy_test.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -30050,7 +30051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
