models __str__ method added

--- a/Notebooks/loadBMG_test.ipynb
+++ b/Notebooks/loadBMG_test.ipynb
@@ -130,7 +130,8 @@
     "    for index, value in enumerate(columns):\n",
     "        row = value[0]\n",
     "        col = int(value[1:])\n",
-    "\n",
+    "        # existing_dna = [i.name for i in Dna.objects.all()]\n",
+    "        existing_dna = []\n",
     "        # Metadata value for each well\n",
     "        s_strain = dict_meta['Strain_df'].at[row, col]\n",
     "        s_media = dict_meta['Media_df'].at[row, col]\n",
@@ -139,17 +140,18 @@
     "\n",
     "        for df_dna in dict_meta['DNA_df']:\n",
     "            s_dna = df_dna.at[row, col]\n",
-    "            if dna != 'None': ### Y no existe ya en la tabla ID\n",
-    "                # d = Dna(name=s_dna, sboluri='')\n",
-    "                # d.save()\n",
-    "                # v = Vector(dna_int=d, sample_id=s)\n",
-    "                # v.save()\n",
-    "                pass\n",
-    "            else:\n",
-    "                ### Buscar el id del Dna con ese nombre y pasárselo para que lo asigne a la tabla vector\n",
-    "                # v = Vector(dna_int=d, sample_id=s)\n",
-    "                # v.save()\n",
-    "                pass\n",
+    "            if s_dna != 'None':\n",
+    "                if s_dna not in existing_dna:\n",
+    "                    # d = Dna(name=s_dna, sboluri='')\n",
+    "                    # d.save()\n",
+    "                    # v = Vector(dna_int=d, sample_id=s)\n",
+    "                    # v.save()\n",
+    "                    pass\n",
+    "                else:                    \n",
+    "                    # d = Dna.objects.filter(name__exact=s_dna)[0]\n",
+    "                    # v = Vector(dna_id=d, sample_id=s)\n",
+    "                    # v.save()\n",
+    "                    pass\n",
     "\n",
     "        if len(dict_meta['Inducer_df']) > 0:\n",
     "            for i, df_ind in enumerate(dict_meta['Inducer_df']):\n",
