--- a/Notebooks/loadSynergy_test.ipynb
+++ b/Notebooks/loadSynergy_test.ipynb
@@ -29995,10 +29995,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Name = OD\n",
-    "# Strain = Top10\n",
-    "# Media = M9-glucosa\n",
-    "# Dna = pLux76:RFP/pTet:YFP/std:CFP"
+    "# Name = OD --> Measurement\n",
+    "# Strain = Top10 --> Sample\n",
+    "# Media = M9-glucosa --> Sample\n",
+    "# Dna = pLux76:RFP/pTet:YFP/std:CFP --> Dna"
    ]
   },
   {
