--- a/Notebooks/INDIVIDUALloadSynergy.ipynb
+++ b/Notebooks/INDIVIDUALloadSynergy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,21 +184,21 @@
     "    # AHORA ASUME QUE ES PARA TODOS LOS POCILLOS (A1 hasta H12), LUEGO DEBE CONSIDERAR SOLO LOS INDICADOS \n",
     "    # POR EL USUARIO\n",
     "    # measurements\n",
-    "    data_array = raw_data[lista_rows2[0][1]+2:lista_rows2[1][1]-2, 3:].astype('float64')\n",
+    "    data_array = raw_data[lista_rows2[i][1]+2:lista_rows2[i+1][1]-2, 3:].astype('float64')\n",
     "    if i == 0:\n",
     "        data = data_array\n",
     "    else:\n",
     "        data = np.concatenate((data, data_array), axis=0)\n",
     "    \n",
     "    # times for the measurements\n",
-    "    time = raw_data[lista_rows2[0][1]+2:lista_rows2[1][1]-2, 1]\n",
+    "    time = raw_data[lista_rows2[i][1]+2:lista_rows2[i+1][1]-2, 1]\n",
     "    time = fix_synergy_time(time)\n",
     "    times = np.concatenate((times, time), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,13 +280,14 @@
     "        v = data[:, col_ind][dind]\n",
     "        #m = Measurement(sample=s, name=n, value=v, time=t)\n",
     "        #m.save()\n",
+    "        cont += 1\n",
     "        dind += 1\n",
     "    col_ind += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -300,73 +301,6 @@
    "source": [
     "print(cont)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 684,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37248"
-      ]
-     },
-     "execution_count": 684,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "96*97*4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 696,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'H'"
-      ]
-     },
-     "execution_count": 696,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plate_row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 698,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'12'"
-      ]
-     },
-     "execution_count": 698,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plate_col"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
